# silverbullet-rag

./: .dockerignore  .env.example  .env.test  .gitignore  .gitmodules  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.test  Dockerfile.test.dockerignore  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  go.mod  go.sum  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.devcontainer/: devcontainer.json
.gemini/: GEMINI.md  settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  buf.yml  ci.yml  (+1 more)
deno/: deno.json  space_lua_runner.ts
docs/: deployment.md  grpc.md  library.md  mcp.md  openwebui-pipe.md
openwebui/: silverbullet_rag.py
proto/: buf.gen.yaml  buf.yaml  rag.proto
scripts/: build_openwebui_pipe.py  check-tag-format.sh  install-hooks.sh  run-integration-tests.sh
server/: __init__.py  __main__.py  config_parser.py  embeddings.py  grpc_server.py  health.py  init_index.py  mcp_http_server.py  mcp_server.py  proposals.py  search.py  watcher.py
test-results/: integration-results.xml
tests/: __init__.py  conftest.py  test_bm25_ranking.py  test_config_parser.py  test_e2e_silverbullet.py  test_embeddings.py  test_folder_hierarchy.py  test_graph_deletion.py  test_grpc_server.py  test_hybrid_search.py  test_init_index.py  test_library_install.py  test_mcp_http.py  test_page_relationships.py  test_proposals.py  test_security.py  test_semantic_search.py  test_unified_server.py  test_v2_features.py  test_watcher.py
(+55 files in other folders)
