[tool.poetry]
name = "silverbullet-rag"
version = "0.1.0"
description = "RAG system for Silverbullet using LadybugDB and MCP"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.0.0"
real-ladybug = "^0.14.0"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
watchdog = "^4.0.0"
markdown-it-py = "^3.0.0"
pydantic = "^2.5.0"
httpx = "^0.27.0"
openai = "^1.10.0"
pyyaml = "^6.0.3"
fastembed = { version = "^0.2.0", optional = true }

[tool.poetry.extras]
local = ["fastembed"]

[tool.poetry.group.dev.dependencies]
fastembed = "^0.2.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
silverbullet-rag-mcp = "silverbullet_rag.mcp_server:main"
silverbullet-rag-grpc = "silverbullet_rag.grpc_server:main"
compile-proto = "grpc_tools.protoc:main"
